[package]
edition = "2021"
name = "rpioled"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.16.1"
sysinfo = "0.30.5"

[[bin]]
name = "rpioled-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "rpioled-client"
path = "src/client/main.rs"
